tests/grammar/valid/core-let-give-01.vit
proc identity(value: int) -> int {
  let base: int = value
  give base
}
