tests/grammar/invalid/generic-call-empty-ctor-01.vit
form Box[T] {
value: T
}

proc main() -> int {
let y = Box[](1)
give 0
}
